public interface BarkBehaviour {
    String Bark();
}
