public class Bork implements BarkBehaviour{
    @Override
    public String Bark() {
        return "bork...";
    }
}
