public class Corgi extends Dog{
    @Override
    public String display() {
        return "Corgi";
    }
}
