public class HerdCattle implements InstinctBehaviour{
    @Override
    public String instinct() {
        return "Must find cows to herd even though I'm a sheep dog, did I ever refactor";
    }
}
