public class Hunt implements InstinctBehaviour{
    @Override
    public String instinct() {
        return "Find pack and hunt!";
    }
}
