public interface InstinctBehaviour {
    String instinct();
}
