public class Lab extends Dog{
    @Override
    public String display() {
        return "Friendly Lab";
    }
}
