public class LoudBark implements BarkBehaviour{
    @Override
    public String Bark() {
        return "BARK!";
    }
}
