public class NoBark implements BarkBehaviour{
    @Override
    public String Bark() {
        return "Can't bark";
    }
}
