public class Wag implements InstinctBehaviour {
    @Override
    public String instinct() {
        return "Wag tail at you!";
    }
}
