public class Wolf extends Dog{
    @Override
    public String display() {
        return "I am a wolf";
    }
}
